--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
+    "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.3",
+    "modern-normalize": "^3.0.1",
+    "persist": "^0.2.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-circular-progressbar": "^2.2.0",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.3.0",
+    "react-router-dom": "^7.3.0",
+    "react-select": "^5.10.1",
+    "redux-persist": "^6.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
