--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
     "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
   },
