--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.3",
+    "date-fns": "^4.1.0",
     "modern-normalize": "^3.0.1",
     "persist": "^0.2.7",
     "react": "^19.0.0",
